# audiotest

./: .gitignore  CMakeLists.txt
resources/: input.aif
src/: main.c  sndfile_utils.c  sndfile_utils.h  sndio_utils.c  sndio_utils.h
